namespace PortProject.Api.Domain.VesselVisitNotificationAggregate;

public enum NotificationStatus
{
    InProgress,
    Submitted,
    Approved,
    Rejected
}